--- a/bytetcc-common/pom.xml
+++ b/bytetcc-common/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.bytesoft</groupId>
 	<artifactId>bytetcc-common</artifactId>
-	<version>0.2.1</version>
+	<version>0.2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>bytetcc-common</name>
