--- a/bytetcc-core/pom.xml
+++ b/bytetcc-core/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.bytesoft</groupId>
 	<artifactId>bytetcc-core</artifactId>
-	<version>0.2.1</version>
+	<version>0.2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>bytetcc-core</name>
@@ -18,13 +18,13 @@
 		<dependency>
 			<groupId>org.bytesoft</groupId>
 			<artifactId>bytetcc-common</artifactId>
-			<version>0.2.1</version>
+			<version>0.2.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.bytesoft</groupId>
 			<artifactId>bytejta-core</artifactId>
-			<version>0.2.1</version>
+			<version>0.2.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
