--- a/bytetcc-core/pom.xml
+++ b/bytetcc-core/pom.xml
@@ -27,5 +27,12 @@
 			<version>0.2.1-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
