--- a/bytetcc-core/pom.xml
+++ b/bytetcc-core/pom.xml
@@ -2,9 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.bytesoft</groupId>
+	<parent>
+		<groupId>org.bytesoft</groupId>
+		<artifactId>bytetcc-parent</artifactId>
+		<version>0.2.1-SNAPSHOT</version>
+	</parent>
 	<artifactId>bytetcc-core</artifactId>
-	<version>0.2.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>bytetcc-core</name>
