--- a/bytetcc-supports/pom.xml
+++ b/bytetcc-supports/pom.xml
@@ -68,6 +68,10 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.6.8</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 </project>
