* 调整bytetcc事务管理器的spring配置文件

--- a/bytetcc-common/pom.xml
+++ b/bytetcc-common/pom.xml
@@ -18,5 +18,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>javax.transaction-api</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
+
 </project>
