--- a/bytetcc-common/pom.xml
+++ b/bytetcc-common/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.bytesoft</groupId>
 		<artifactId>bytetcc-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0-alpha</version>
 	</parent>
 	<artifactId>bytetcc-common</artifactId>
 	<packaging>jar</packaging>
