--- a/bytetcc-core/pom.xml
+++ b/bytetcc-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.bytesoft</groupId>
 		<artifactId>bytetcc-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.3.0-alpha</version>
 	</parent>
 	<artifactId>bytetcc-core</artifactId>
 	<packaging>jar</packaging>
@@ -21,13 +21,13 @@
 		<dependency>
 			<groupId>org.bytesoft</groupId>
 			<artifactId>bytetcc-common</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>0.3.0-alpha</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.bytesoft</groupId>
 			<artifactId>bytejta-core</artifactId>
-			<version>0.3.0-SNAPSHOT</version>
+			<version>0.3.0-alpha</version>
 		</dependency>
 
 		<dependency>
