--- a/bytetcc-supports/pom.xml
+++ b/bytetcc-supports/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.bytesoft</groupId>
 		<artifactId>bytetcc-parent</artifactId>
-		<version>0.3.0-alpha</version>
+		<version>0.3.0-beta</version>
 	</parent>
 	<artifactId>bytetcc-supports</artifactId>
 	<packaging>jar</packaging>
@@ -21,12 +21,12 @@
 		<dependency>
 			<groupId>org.bytesoft</groupId>
 			<artifactId>bytetcc-core</artifactId>
-			<version>0.3.0-alpha</version>
+			<version>0.3.0-beta</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bytesoft</groupId>
 			<artifactId>bytejta-supports</artifactId>
-			<version>0.3.0-alpha</version>
+			<version>0.3.0-beta</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
