* 调整bytetcc-supports工程的描述

--- a/bytetcc-supports/pom.xml
+++ b/bytetcc-supports/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>jar</packaging>
 
 	<name>bytetcc-supports</name>
-	<description>The bytetcc-supports project the module of ByteTCC for integrating with third-party open source project.</description>
+	<description>The bytetcc-supports project is the module of ByteTCC for integrating with third-party open source project.</description>
 	<url>http://www.bytesoft.org</url>
 
 	<properties>
