--- a/bytetcc-supports-springcloud/pom.xml
+++ b/bytetcc-supports-springcloud/pom.xml
@@ -7,10 +7,10 @@
 		<artifactId>bytetcc-parent</artifactId>
 		<version>0.4.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>bytetcc-supports</artifactId>
+	<artifactId>bytetcc-supports-springcloud</artifactId>
 	<packaging>jar</packaging>
 
-	<name>bytetcc-supports</name>
+	<name>bytetcc-supports-springcloud</name>
 	<description>The bytetcc-supports project is the module of ByteTCC for integrating with third-party open source project.</description>
 	<url>http://www.bytesoft.org</url>
 
