--- a/bytetcc-supports-dubbo/pom.xml
+++ b/bytetcc-supports-dubbo/pom.xml
@@ -20,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.bytesoft</groupId>
-			<artifactId>bytetcc-core</artifactId>
+			<artifactId>bytetcc-supports</artifactId>
 			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
