--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,156 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<dependencies>
-	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<!-- javax -->
+			<dependency>
+				<groupId>javax.transaction</groupId>
+				<artifactId>javax.transaction-api</artifactId>
+				<version>1.2</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.jms</groupId>
+				<artifactId>javax.jms-api</artifactId>
+				<version>2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.resource</groupId>
+				<artifactId>javax.resource-api</artifactId>
+				<version>1.7</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.1.0</version>
+			</dependency>
+
+			<!-- spring -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>4.3.7.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>4.3.7.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>4.3.7.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-aop</artifactId>
+				<version>4.3.7.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>4.3.7.RELEASE</version>
+			</dependency>
+
+			<!-- spring-cloud -->
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-eureka</artifactId>
+				<version>1.3.0.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-ribbon</artifactId>
+				<version>1.3.0.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-feign</artifactId>
+				<version>1.3.0.RELEASE</version>
+			</dependency>
+
+			<!-- bytejta -->
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytejta-core</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytejta-supports</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytejta-supports-dubbo</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+
+			<!-- bytetcc -->
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytetcc-common</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytetcc-core</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytetcc-supports</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytetcc-supports-dubbo</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.bytesoft</groupId>
+				<artifactId>bytetcc-supports-springcloud</artifactId>
+				<version>0.4.0-SNAPSHOT</version>
+			</dependency>
+
+			<!-- logger -->
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>1.7.6</version>
+			</dependency>
+
+			<!-- apache-commons -->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.4</version>
+			</dependency>
+
+			<!-- others -->
+			<dependency>
+				<groupId>aopalliance</groupId>
+				<artifactId>aopalliance</artifactId>
+				<version>1.0</version>
+			</dependency>
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib</artifactId>
+				<version>2.2.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>1.6.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-recipes</artifactId>
+				<version>2.11.0</version>
+			</dependency>
+
+		</dependencies>
+	</dependencyManagement>
 
 	<modules>
 		<module>bytetcc-common</module>
