--- a/pom.xml
+++ b/pom.xml
@@ -111,22 +111,22 @@
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-core</artifactId>
-				<version>0.4.0-alpha7</version>
+				<version>0.4.0-beta1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-supports</artifactId>
-				<version>0.4.0-alpha7</version>
+				<version>0.4.0-beta1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-supports-springcloud</artifactId>
-				<version>0.4.0-alpha7</version>
+				<version>0.4.0-beta1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-supports-dubbo</artifactId>
-				<version>0.4.0-alpha7</version>
+				<version>0.4.0-beta1</version>
 			</dependency>
 
 			<!-- bytetcc -->
