--- a/bytetcc-supports-springcloud/pom.xml
+++ b/bytetcc-supports-springcloud/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.bytesoft</groupId>
 		<artifactId>bytetcc-parent</artifactId>
-		<version>0.4.0-beta3</version>
+		<version>0.4.0-rc1</version>
 	</parent>
 	<artifactId>bytetcc-supports-springcloud</artifactId>
 	<packaging>jar</packaging>
