调整TransactionBeanFactory & TransactionManager的自动注入方式

--- a/bytetcc-core/pom.xml
+++ b/bytetcc-core/pom.xml
@@ -34,5 +34,14 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
+
 	</dependencies>
 </project>
