--- a/pom.xml
+++ b/pom.xml
@@ -106,27 +106,32 @@
 				<artifactId>spring-cloud-starter-feign</artifactId>
 				<version>1.3.0.RELEASE</version>
 			</dependency>
+			<!-- <dependency> -->
+			<!-- 	<groupId>org.springframework.cloud</groupId> -->
+			<!-- 	<artifactId>spring-cloud-zookeeper-discovery</artifactId> -->
+			<!-- 	<version>1.1.0.RELEASE</version> -->
+			<!-- </dependency> -->
 
 			<!-- bytejta -->
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-core</artifactId>
-				<version>0.4.0-beta5</version>
+				<version>0.4.0-rc2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-supports</artifactId>
-				<version>0.4.0-beta5</version>
+				<version>0.4.0-rc2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-supports-springcloud</artifactId>
-				<version>0.4.0-beta5</version>
+				<version>0.4.0-rc2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bytesoft</groupId>
 				<artifactId>bytejta-supports-dubbo</artifactId>
-				<version>0.4.0-beta5</version>
+				<version>0.4.0-rc2</version>
 			</dependency>
 
 			<!-- bytetcc -->
