--- a/pom.xml
+++ b/pom.xml
@@ -280,6 +280,11 @@
 				<version>1.6.8</version>
 			</dependency>
 			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.4</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.curator</groupId>
 				<artifactId>curator-recipes</artifactId>
 				<version>2.11.0</version>
