--- a/pom.xml
+++ b/pom.xml
@@ -100,37 +100,54 @@
 				<version>5.0.8.RELEASE</version>
 			</dependency>
 
+			<!-- spring-boot -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot</artifactId>
+				<version>2.0.4.RELEASE</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-autoconfigure</artifactId>
+				<version>2.0.4.RELEASE</version>
+			</dependency>
+
 			<!-- spring-cloud -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-eureka</artifactId>
-				<version>2.0.0.M2</version>
+				<version>2.0.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-netflix-eureka-client</artifactId>
-				<version>2.0.0.RC1</version>
+				<version>2.0.1.RELEASE</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-ribbon</artifactId>
-				<version>2.0.0.M2</version>
+				<version>2.0.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-feign</artifactId>
-				<version>2.0.0.M2</version>
+				<version>2.0.0.M1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-hystrix</artifactId>
-				<version>2.0.0.M2</version>
+				<version>2.0.0.M1</version>
 			</dependency>
-			<!-- <dependency> -->
-			<!-- 	<groupId>org.springframework.cloud</groupId> -->
-			<!-- 	<artifactId>spring-cloud-zookeeper-discovery</artifactId> -->
-			<!-- 	<version>1.1.0.RELEASE</version> -->
-			<!-- </dependency> -->
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-netflix-core</artifactId>
+				<version>2.0.0.M1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-commons</artifactId>
+				<version>2.0.0.M1</version>
+			</dependency>
 
 			<!-- bytejta -->
 			<dependency>
