--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,11 @@
 				<artifactId>spring-cloud-config-client</artifactId>
 				<version>2.0.1.RELEASE</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-zookeeper-core</artifactId>
+				<version>2.0.0.RELEASE</version>
+			</dependency>
 
 			<!-- bytejta -->
 			<dependency>
@@ -314,7 +319,7 @@
 			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjweaver</artifactId>
-				<version>1.6.8</version>
+				<version>1.8.13</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
