--- a/pom.xml
+++ b/pom.xml
@@ -255,6 +255,11 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.9.6</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>2.9.0</version>
+			</dependency>
 
 			<!-- netty -->
 			<dependency>
