--- a/bytetcc-supports-springcloud/pom.xml
+++ b/bytetcc-supports-springcloud/pom.xml
@@ -11,7 +11,7 @@
 	<packaging>jar</packaging>
 
 	<name>bytetcc-supports-springcloud</name>
-	<description>The bytetcc-supports project is the module of ByteTCC for integrating with third-party open source project.</description>
+	<description>The bytetcc-supports-springcloud project is the module of ByteTCC for integrating with spring cloud.</description>
 	<url>http://www.bytesoft.org</url>
 
 	<properties>
