--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,21 @@
 				<artifactId>spring-cloud-zookeeper-core</artifactId>
 				<version>2.0.0.RELEASE</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-zookeeper-discovery</artifactId>
+				<version>2.0.0.RELEASE</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.netflix.ribbon</groupId>
+			    <artifactId>ribbon-eureka</artifactId>
+			    <version>2.2.5</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-consul-discovery</artifactId>
+				<version>2.0.1.RELEASE</version>
+			</dependency>
 
 			<!-- bytejta -->
 			<dependency>
